bdr.BDR2.scala.error
Erreur de compilation :
BDR2:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (fini=false) {
           ^